implementacao de users crud e auth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,24 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@common/*": ["src/common/*"],
+      "@filters/*": ["src/common/filters/*"],
+      "@controllers/*": ["src/controllers/*"],
+      "@services/*": ["src/services/*"],
+      "@utils/*": ["src/utils/*"],
+      "@modules/*": ["src/modules/*"]
+      // Adicione mais aliases conforme necessário
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "moduleResolution": "node" // Garantir a resolução de módulos
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
